snacka-certs/manifests/minimal-ingress-bad1.yaml
# Kubernetes Ingress Controller Fake Certificate
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: ingress-basic
spec:
  ingressClassName: nginx
  rules:
  - host: ijoijoi123.com
    http:
      paths:
      - backend:
          service:
            name: kuard-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ijoijoi123.com
    secretName: tlssecret
